remove all unhelpful "any()" matchers from our tests