@@ -6,6 +6,7 @@ import static org.mockito.Mockito.*;
 
 import bio.terra.pipelines.app.configuration.internal.RetryConfiguration;
 import bio.terra.pipelines.dependencies.common.HealthCheck;
+import bio.terra.pipelines.testutils.BaseEmbeddedDbTest;
 import java.net.SocketTimeoutException;
 import java.util.*;
 import org.broadinstitute.dsde.workbench.client.leonardo.ApiException;
@@ -16,14 +17,17 @@ import org.broadinstitute.dsde.workbench.client.leonardo.model.ListAppResponse;
 import org.broadinstitute.dsde.workbench.client.leonardo.model.SystemStatus;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.InjectMocks;
 import org.mockito.stubbing.Answer;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.retry.backoff.FixedBackOffPolicy;
 import org.springframework.retry.support.RetryTemplate;
 
-@ExtendWith(MockitoExtension.class)
-class LeonardoServiceTest {
+class LeonardoServiceTest extends BaseEmbeddedDbTest {
+  @Autowired @InjectMocks LeonardoService leonardoService;
+  @MockBean LeonardoClient leonardoClient;
+
   final String workspaceId = UUID.randomUUID().toString();
   final RetryConfiguration retryConfig = new RetryConfiguration();
   RetryTemplate template = retryConfig.listenerResetRetryTemplate();
@@ -48,7 +52,6 @@ class LeonardoServiceTest {
   void socketExceptionRetriesEventuallySucceed() throws Exception {
     List<ListAppResponse> expectedResponse = List.of(new ListAppResponse());
 
-    LeonardoClient leonardoClient = mock(LeonardoClient.class);
     AppsApi appsApi = mock(AppsApi.class);
     when(appsApi.listAppsV2(workspaceId, null, null, null))
         .thenAnswer(errorAnswer)
@@ -66,7 +69,6 @@ class LeonardoServiceTest {
   void socketExceptionRetriesEventuallyFail() throws Exception {
     List<ListAppResponse> expectedResponse = List.of(new ListAppResponse());
 
-    LeonardoClient leonardoClient = mock(LeonardoClient.class);
     AppsApi appsApi = mock(AppsApi.class);
     when(appsApi.listAppsV2(workspaceId, null, null, null))
         .thenAnswer(errorAnswer)
@@ -91,7 +93,6 @@ class LeonardoServiceTest {
 
     ApiException expectedException = new ApiException(400, "Bad Leonardo");
 
-    LeonardoClient leonardoClient = mock(LeonardoClient.class);
     AppsApi appsApi = mock(AppsApi.class);
     when(appsApi.listAppsV2(workspaceId, null, null, null))
         .thenThrow(expectedException)
@@ -112,56 +113,51 @@ class LeonardoServiceTest {
 
   @Test
   void getWdsUrlFromApp() {
-    LeonardoClient leonardoClient = mock(LeonardoClient.class);
-
     LeonardoService leonardoService = spy(new LeonardoService(leonardoClient, appUtils, template));
 
-    doReturn(Collections.emptyList()).when(leonardoService).getApps(workspaceId, authToken);
-    doReturn("bestWdsUri").when(appUtils).findUrlForWds(any(), any());
+    List<ListAppResponse> listAppResponseList = List.of(new ListAppResponse().appName("hhaha"));
+    doReturn(listAppResponseList).when(leonardoService).getApps(workspaceId, authToken);
+    doReturn("bestWdsUri").when(appUtils).findUrlForWds(listAppResponseList, workspaceId);
 
     assertEquals("bestWdsUri", leonardoService.getWdsUrlFromApps(workspaceId, authToken));
   }
 
   @Test
   void getWdsUrlFromAppResponse() {
-    LeonardoClient leonardoClient = mock(LeonardoClient.class);
-
+    List<ListAppResponse> listAppResponseList = List.of(new ListAppResponse().appName("hhaasdha"));
     LeonardoService leonardoService = spy(new LeonardoService(leonardoClient, appUtils, template));
-    doReturn("bestWdsUri").when(appUtils).findUrlForWds(any(), any());
+    doReturn("bestWdsUri").when(appUtils).findUrlForWds(listAppResponseList, workspaceId);
 
     assertEquals(
         "bestWdsUri",
-        leonardoService.getWdsUrlFromGetAppResponse(Collections.emptyList(), workspaceId));
+        leonardoService.getWdsUrlFromGetAppResponse(listAppResponseList, workspaceId));
   }
 
   @Test
   void getCbasUrlFromApp() {
-    LeonardoClient leonardoClient = mock(LeonardoClient.class);
-
     LeonardoService leonardoService = spy(new LeonardoService(leonardoClient, appUtils, template));
 
-    doReturn(Collections.emptyList()).when(leonardoService).getApps(workspaceId, authToken);
-    doReturn("bestCbasUri").when(appUtils).findUrlForCbas(any(), any());
+    List<ListAppResponse> listAppResponseList = List.of(new ListAppResponse().appName("hhaasdha"));
+    doReturn(listAppResponseList).when(leonardoService).getApps(workspaceId, authToken);
+    doReturn("bestCbasUri").when(appUtils).findUrlForCbas(listAppResponseList, workspaceId);
 
     assertEquals("bestCbasUri", leonardoService.getCbasUrlFromApps(workspaceId, authToken));
   }
 
   @Test
   void getCbasUrlFromAppResponse() {
-    LeonardoClient leonardoClient = mock(LeonardoClient.class);
-
     LeonardoService leonardoService = spy(new LeonardoService(leonardoClient, appUtils, template));
-    doReturn("bestCbasUri").when(appUtils).findUrlForCbas(any(), any());
+
+    List<ListAppResponse> listAppResponseList = List.of(new ListAppResponse().appName("hhaasdha"));
+    doReturn("bestCbasUri").when(appUtils).findUrlForCbas(listAppResponseList, workspaceId);
 
     assertEquals(
         "bestCbasUri",
-        leonardoService.getCbasUrlFromGetAppResponse(Collections.emptyList(), workspaceId));
+        leonardoService.getCbasUrlFromGetAppResponse(listAppResponseList, workspaceId));
   }
 
   @Test
   void createAppV2() {
-    LeonardoClient leonardoClient = mock(LeonardoClient.class);
-
     LeonardoService leonardoService = spy(new LeonardoService(leonardoClient, appUtils, template));
     Map map = Map.of("blah", "ok");
     String appName = UUID.randomUUID().toString();
